examples/test/testpolicy10620.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10620
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key37: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value10
          key16: value16
          key36: value44
      podSelector:
        matchLabels:
          key25: value41
